<resources>
    <string name="app_name">ConsumerApp</string>
    <string name="user_detail_information">Please use main application to see user detail information</string>
    <string name="username">Username</string>
    <string name="indonesia">Indonesia</string>
    <string name="dicoding">Dicoding</string>
    <string name="follower">Follower</string>
    <string name="_9999">9999</string>
    <string name="following">Following</string>
    <string name="repositories">Repositories</string>
    <string name="no_company">No Company</string>
    <string name="no_location">No Location</string>
</resources>