<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp"
    android:background="@drawable/shape_rounded_main_card"
    android:elevation="10dp"
    android:layout_marginBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_user"
        android:background="@drawable/ic_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/iv_user"
        android:textAlignment="center"
        android:maxLines="1"
        android:text="@string/username"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toEndOf="@+id/iv_user"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_baseline_pin_drop_24"
        android:drawablePadding="3dp"
        android:textAlignment="center"
        android:maxLines="1"
        android:text="@string/indonesia"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_user"
        app:layout_constraintTop_toBottomOf="@+id/txt_username" />

    <TextView
        android:id="@+id/txt_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_business_and_trade"
        android:maxLines="1"
        android:text="@string/dicoding"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_user"
        app:layout_constraintTop_toBottomOf="@+id/txt_location" />

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_user"
        app:layout_constraintTop_toBottomOf="@+id/txt_company">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follower"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9999"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9999"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repositories"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9999"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>